Validation/MuonCSCDigis/latestCompileError.txt
[bonillaj@cmslpc151 src]$ scram b -j 4
Reading cached build data
>> Local Products Rules ..... started
>> Local Products Rules ..... done
>> Building CMSSW version CMSSW_11_2_0_pre4 ----
>> Subsystem BigProducts built
>> Entering Package Validation/MuonCSCDigis
>> Creating project symlinks
>> Compiling  /uscms_data/d3/bonillaj/workDir7/CMSSW_11_2_0_pre4/src/Validation/MuonCSCDigis/src/CSCStubEfficiencyValidation.cc
/uscms_data/d3/bonillaj/workDir7/CMSSW_11_2_0_pre4/src/Validation/MuonCSCDigis/src/CSCStubEfficiencyValidation.cc: In constructor 'CSCStubEfficiencyValidation::CSCStubEfficiencyValidation(const edm::InputTag&, const edm::ParameterSet&, edm::ConsumesCollector&&)':
/uscms_data/d3/bonillaj/workDir7/CMSSW_11_2_0_pre4/src/Validation/MuonCSCDigis/src/CSCStubEfficiencyValidation.cc:17:31: error: no matching function for call to 'CSCStubMatcher::CSCStubMatcher()'
   : CSCBaseValidation(inputTag) {
                               ^
In file included from /uscms_data/d3/bonillaj/workDir7/CMSSW_11_2_0_pre4/src/Validation/MuonCSCDigis/interface/CSCStubEfficiencyValidation.h:14,
                 from /uscms_data/d3/bonillaj/workDir7/CMSSW_11_2_0_pre4/src/Validation/MuonCSCDigis/src/CSCStubEfficiencyValidation.cc:3:
/uscms_data/d3/bonillaj/workDir7/CMSSW_11_2_0_pre4/src/Validation/MuonCSCDigis/interface/CSCStubMatcher.h:24:3: note: candidate: 'CSCStubMatcher::CSCStubMatcher(const edm::ParameterSet&, edm::ConsumesCollector&&)'
   CSCStubMatcher(edm::ParameterSet const& iPS, edm::ConsumesCollector&& iC);
   ^~~~~~~~~~~~~~
/uscms_data/d3/bonillaj/workDir7/CMSSW_11_2_0_pre4/src/Validation/MuonCSCDigis/interface/CSCStubMatcher.h:24:3: note:   candidate expects 2 arguments, 0 provided
/uscms_data/d3/bonillaj/workDir7/CMSSW_11_2_0_pre4/src/Validation/MuonCSCDigis/interface/CSCStubMatcher.h:22:7: note: candidate: 'CSCStubMatcher::CSCStubMatcher(const CSCStubMatcher&)'
 class CSCStubMatcher {
       ^~~~~~~~~~~~~~
/uscms_data/d3/bonillaj/workDir7/CMSSW_11_2_0_pre4/src/Validation/MuonCSCDigis/interface/CSCStubMatcher.h:22:7: note:   candidate expects 1 argument, 0 provided
/uscms_data/d3/bonillaj/workDir7/CMSSW_11_2_0_pre4/src/Validation/MuonCSCDigis/src/CSCStubEfficiencyValidation.cc:34:42: error: cannot bind rvalue reference of type edm::ConsumesCollector&&' to lvalue of type 'edm::ConsumesCollector'
   cscStubMatcher_ = CSCStubMatcher(pset, iC);
                                          ^~
In file included from /uscms_data/d3/bonillaj/workDir7/CMSSW_11_2_0_pre4/src/Validation/MuonCSCDigis/interface/CSCStubEfficiencyValidation.h:14,
                 from /uscms_data/d3/bonillaj/workDir7/CMSSW_11_2_0_pre4/src/Validation/MuonCSCDigis/src/CSCStubEfficiencyValidation.cc:3:
/uscms_data/d3/bonillaj/workDir7/CMSSW_11_2_0_pre4/src/Validation/MuonCSCDigis/interface/CSCStubMatcher.h:24:3: note:   initializing argument 2 of 'CSCStubMatcher::CSCStubMatcher(const edm::ParameterSet&, edm::ConsumesCollector&&)'
   CSCStubMatcher(edm::ParameterSet const& iPS, edm::ConsumesCollector&& iC);
   ^~~~~~~~~~~~~~
gmake: *** [config/SCRAM/GMake/Makefile.rules:1683: tmp/slc7_amd64_gcc820/src/Validation/MuonCSCDigis/src/ValidationMuonCSCDigis/CSCStubEfficiencyValidation.cc.o] Error 1
gmake: *** [There are compilation/build errors. Please see the detail log above.] Error 2
